# multytrader

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
multy_trader/: manage.py  test.py  testik.py  utils.py
multy_trader/analytics/: admin.py  models.py  services.py
multy_trader/analytics/migrations/: 0001_initial.py  0002_alter_analytics_exchange_long_and_more.py  0003_remove_analytics_time_analytics_exit_time_and_more.py
multy_trader/exchange/: admin.py  apps.py  forms.py  models.py
multy_trader/exchange/migrations/: 0001_initial.py  (+16 more)
multy_trader/gate/: admin.py  models.py  response.txt  services.py  sockets.py  test.py
multy_trader/mexc/: PrivateAccountV3Api_pb2.py  PrivateDealsV3Api_pb2.py  PrivateOrdersV3Api_pb2.py  PublicAggreBookTickerV3Api_pb2.py  PublicAggreDealsV3Api_pb2.py  PublicAggreDepthsV3Api_pb2.py  PublicBookTickerBatchV3Api_pb2.py  PublicBookTickerV3Api_pb2.py  PublicDealsV3Api_pb2.py  PublicIncreaseDepthsBatchV3Api_pb2.py  PublicIncreaseDepthsV3Api_pb2.py  PublicLimitDepthsV3Api_pb2.py  PublicMiniTickerV3Api_pb2.py  PublicMiniTickersV3Api_pb2.py  PublicSpotKlineV3Api_pb2.py  PushDataV3ApiWrapper_pb2.py  admin.py  models.py  socket_wack.py  testim_api.py
multy_trader/multy_trader/: asgi.py  settings.py  urls.py  wsgi.py
multy_trader/purchase/: admin.py  apps.py  models.py  services.py
multy_trader/trade/: admin.py  apps.py  bot.py  bot_new.py  forms.py  models.py  signals.py  urls.py  views.py
multy_trader/trader/: admin.py  models.py  services.py
(+88 files in other folders)
