[project]
name = "multytrader"
version = "0.1.0"
description = ""
authors = [
    {name = "v.kondratov"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "requests (>=2.32.4,<3.0.0)",
    "gate-api (>=6.100.2,<7.0.0)",
    "websocket-client (>=1.8.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
